[docs] fix navigation dropdown overlap. closes #74

--- a/public/styl/main.styl
+++ b/public/styl/main.styl
@@ -91,6 +91,11 @@ section
   .button
     margin: 5px
 
+//- Navigation
+
+.top-nav ul
+  z-index: 10
+
 //- Progress
 
 .progress
